--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -34,8 +34,23 @@
       </li>
 
       <li class="nav-item">
-        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true"
-          >Disabled</a
+        <a
+          class="nav-link"
+          routerLinkActivate="active"
+          routerLink="/annonce"
+          tabindex="-1"
+          aria-disabled="true"
+          >annonce</a
+        >
+      </li>
+      <li class="nav-item">
+        <a
+          class="nav-link"
+          routerLinkActivate="active"
+          routerLink="/annonce/list"
+          tabindex="-1"
+          aria-disabled="true"
+          >list annonce</a
         >
       </li>
     </ul>
