--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -37,6 +37,15 @@
         <a
           class="nav-link"
           routerLinkActivate="active"
+          routerLink="/appartement/list"
+          >Appartment</a
+        >
+      </li>
+
+      <li class="nav-item">
+        <a
+          class="nav-link"
+          routerLinkActivate="active"
           routerLink="/annonce"
           tabindex="-1"
           aria-disabled="true"
