--- a/src/app/appartment/appartment.component.html
+++ b/src/app/appartment/appartment.component.html
@@ -1,8 +1,10 @@
-<div class="card" style="width: 18rem">
+<div class="card m-3" style="width: 18rem">
   <div class="card-body">
     <h5 class="card-title">Card title</h5>
     <p class="card-text">
       {{ appartment.numAppart }}
     </p>
+    <button class="btn btn-danger" (click)="deleteappart()">delete</button>
+    <button class="btn btn-primary" (click)="update()">Update</button>
   </div>
 </div>
